[package]
name = "hyperex"
version = "0.2.0"
authors = ["Anicet Ebou <anicet.ebou@gmail.com>"]
edition = "2018"
exclude = ["test/*", ".github/*"]
description = "Hypervariable region primer-based extracted"
homepage = "https://github.com/Ebedthan/hyperex"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["bioinformatics", "16S rRNA"] 

[dependencies]
anyhow        = "1.0.40"
bio           = "0.41"
chrono        = "0.4"
clap          = { version = "3.1", features = ["cargo"] }
fern          = { version = "0.6", features = ["colored"] }
log           = "0.4"
niffler       = "2.4"
phf           = { version = "0.10", features = ["macros"] }
sysinfo       = "0.20"

[dev-dependencies]
tempfile      = "3"
assert_cmd    = "2"
predicates    = "1"


[profile.release]
opt-level       = 3
debug           = true
overflow-checks = false
lto             = 'thin'
panic           = 'abort'
incremental     = false

[[bin]]
name = "hyperex"
path = "src/main.rs"
bench = false